[gd_scene load_steps=18 format=2]

[ext_resource path="res://2DStratOnCombat/Bandit/attack_2.png" type="Texture" id=1]
[ext_resource path="res://2DStratOnCombat/baseEnemy/baseEnemy.gd" type="Script" id=2]
[ext_resource path="res://2DStratOnCombat/Bandit/attack2_1.png" type="Texture" id=3]
[ext_resource path="res://2DStratOnCombat/Bandit/run_4.png" type="Texture" id=4]
[ext_resource path="res://2DStratOnCombat/Bandit/run_1.png" type="Texture" id=5]
[ext_resource path="res://2DStratOnCombat/Bandit/hit_1.png" type="Texture" id=6]
[ext_resource path="res://2DStratOnCombat/Bandit/attack_3.png" type="Texture" id=7]
[ext_resource path="res://2DStratOnCombat/Bandit/run_2.png" type="Texture" id=8]
[ext_resource path="res://2DStratOnCombat/Bandit/attack2_2.png" type="Texture" id=9]
[ext_resource path="res://2DStratOnCombat/Bandit/run_3.png" type="Texture" id=10]
[ext_resource path="res://2DStratOnCombat/Bandit/attack_1.png" type="Texture" id=11]
[ext_resource path="res://2DStratOnCombat/Bandit/attack2_3.png" type="Texture" id=12]
[ext_resource path="res://2DStratOnCombat/baseEnemy/intent.png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 23.8666, 26.4835 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 6 ), ExtResource( 8 ) ],
"loop": false,
"name": "Hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ), ExtResource( 1 ), ExtResource( 7 ) ],
"loop": false,
"name": "Attack_Heavy",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 9 ), ExtResource( 12 ) ],
"loop": false,
"name": "Attack_Light",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 4 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 24 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 24 )

[node name="baseEnemy" type="KinematicBody2D" groups=[
"enemy",
]]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Run"
frame = 2
playing = true

[node name="HitLeft" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitLeft"]
position = Vector2( -32, 0 )
shape = SubResource( 3 )

[node name="HitRight" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitRight"]
position = Vector2( 32, 0 )
shape = SubResource( 4 )

[node name="intent" type="Sprite" parent="."]
modulate = Color( 0.752941, 0.0156863, 0.0156863, 1 )
position = Vector2( 0, -22.3636 )
scale = Vector2( 1, 0.5 )
texture = ExtResource( 13 )
[connection signal="body_entered" from="HitLeft" to="." method="_on_HitLeft_body_entered"]
[connection signal="body_exited" from="HitLeft" to="." method="_on_HitLeft_body_exited"]
[connection signal="body_entered" from="HitRight" to="." method="_on_HitRight_body_entered"]
[connection signal="body_exited" from="HitRight" to="." method="_on_HitRight_body_exited"]
